test(no-endpoints): assert that internal endpoints are not generated